--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,15 @@
+jwt:
+  secret-key: soongsil-uni.yourssu_2023_secret_key
+  # 30 days
+  token.expired-time-ms: 2592000000
 
+spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3306/blog
+    username: root
+    password: wndehd
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
