--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ jwt:
 
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/blog
+    url: jdbc:mariadb://localhost:3306/overflow
     username: root
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
