--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
     implementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 }
 
 tasks.named('test') {
