--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,macos,windows
+
+src/main/resources/application.yaml
