--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,12 @@
 jwt:
-  secret-key: soongsil-uni.yourssu_2023_secret_key
+  secret-key: back-end-project-overflow-secret-key
   # 30 days
   token.expired-time-ms: 2592000000
 
+
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/blog
+    url: jdbc:mariadb://localhost:3306/stack_overflow
     username: root
     password: wndehd
     driver-class-name: org.mariadb.jdbc.Driver
@@ -13,3 +14,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+
