--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,5 +11,5 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
